# adventofcode

./: .gitignore  README.md  entry.py  pyproject.toml  requirements.txt  setup.py  template.py
2015/01/: 01.py
2015/02/: 02.py
2015/03/: 03.py
2015/04/: 04.py
2015/05/: 05.py
2015/06/: 06.py
2015/07/: 07.py
2015/08/: 08.py
2015/09/: 09.py
2015/10/: 10.py
2015/11/: 11.py
2015/12/: 12.py
2016/01/: 01.py
2019/01/: 01.py
2019/02/: 02-02.py  02.py
2019/03/: 03-02.py  03.py
2019/04/: 04.py
2020/: README.md
2020/01/: find.py  find2.py
2020/02/: passwords.py
2020/03/: tree.py
2020/04/: passport.py
2020/05/: boardingpass.py
2020/06/: questions.py  questions2.py
2020/07/: lugagge.py
2020/08/: gameconsole.py
2020/09/: xmas.py
2020/10/: jolts.py
2020/11/: seats.py  seats2.py
2020/12/: ferry.py  ferry2.py
2020/13/: shuttle.py  shuttle2.py
2020/14/: dockingdata.py  dockingdata2.py
2020/15/: 15.py
2020/16/: 16.py
2020/17/: 17.py
2021/: README.md
2021/01/: 01.py
2021/02/: 02.py
2021/03/: 03.py
2021/04/: 04.py
2021/05/: 05.py  05_bresenham.py  05_optimized.py
2021/06/: 06.py
2021/07/: 07.py
2021/08/: 08.py
2021/09/: 09.py
2021/10/: 10.py
2021/11/: 11.py
2021/12/: 12.py
2021/13/: 13.py
2021/14/: 14.py
2021/15/: 15.py
2021/16/: 16.py
2021/17/: 17.py
2021/18/: 18.py
2021/20/: 20.py
2021/21/: 21.py
2021/22/: 22.py
2021/25/: 25.py
2022/01/: 01.py
2022/02/: 02.py
2022/03/: 03.py
2022/04/: 04.py
2022/05/: 05.py
2022/06/: 06.py
2022/07/: 07.py
2022/08/: 08.py
(+75 files in other folders)
