[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code solutions in Python"
authors = ["Karel Bemelmans <karel@bemelmans.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.0.0"
bresenham = "^0.2.0"
networkx = "^3.0"
numpy = "^1.24.0"
matplotlib = "^3.6.0"
sympy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^25.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''
